implementacion de busqueda por nivel
